[package]
name = "keystore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
ethereum-types = { version = "0.13.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
rand = "0.8.5"
aes = "0.8.1"
thiserror = { version = "1.0.31", default-features = false }
scrypt = "0.10.0"
ctr = "0.9.1"
sha3 = "0.10.1"
digest = "0.10.3"
k256 = "0.11.3"